Fix env var info z-index
Fixes #96419

--- a/src/vs/workbench/contrib/terminal/browser/media/widgets.css
+++ b/src/vs/workbench/contrib/terminal/browser/media/widgets.css
@@ -45,7 +45,7 @@
 	width: 28px;
 	height: 28px;
 	text-align: center;
-	z-index: 25;
+	z-index: 10;
 	opacity: 0.5;
 }
 
